--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
 
   "ConnectionStrings": {
-    "MongoDbConnection": ""},
+    "MongoDbConnection": "mongodb+srv://ITStepAdmin:<db_password>@itstepcluster.og3fq.mongodb.net/?retryWrites=true&w=majority&appName=ITStepCluster"},
   "AllowedHosts": "*"
 }
