--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "MongoDbConnection": "mongodb+srv://ITStepAdmin:<db_password>@itstepcluster.og3fq.mongodb.net/?retryWrites=true&w=majority&appName=ITStepCluster"},
+    "MongoDbConnection": "mongodb+srv://ITStepAdmin:zdRilag5seIS7YOi@itstepcluster.og3fq.mongodb.net/?retryWrites=true&w=majority&appName=ITStepCluster"
+  },
   "AllowedHosts": "*"
 }
